# vpnportal

./: README.md  docker-compose.yaml  init.sql  package.json
authpoint/: Cargo.toml
authpoint/src/: main.rs
hades/: .env  Cargo.toml
hades/src/: main.rs
hades/src/handlers/: endpoints.rs
hades/src/models/: cachain_entity.rs  client_entity.rs  client_repository.rs  errors.rs  mod.rs  user_entity.rs  user_repository.rs
hades/src/services/: certification_service.rs  client_repository.rs  client_service.rs  login_service.rs  mod.rs  user_repository.rs  user_service.rs
portal/: package.json
portal/src/lib/: types.ts
portal/src/routes/: +page.server.ts  +page.svelte  layout.css
portal/src/routes/registration/: +page.svelte
portal/src/routes/signup/: +page.server.ts  +page.svelte
portal/src/routes/testeldap/: +page.svelte
portal/src/routes/users/: +page.svelte
portal/src/routes/users/[uid]/: +page.svelte
portal/src/routes/users/new/: +page.svelte
portal/src/routes/users/new/create/: +page.svelte
portal/src/routes/usuarios/: +page.svelte
portal/src/routes/usuarios/[uid]/: +page.svelte
portal/src/routes/usuarios/novo/: +page.svelte
